--- a/Code/2 - Evaluation.ipynb
+++ b/Code/2 - Evaluation.ipynb
@@ -26,6 +26,7 @@
     "#nltk.download('punkt')\n",
     "from nltk import word_tokenize\n",
     "random.seed(1)\n",
+    "np.random.seed(1)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,28 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/%ik/input_13.file' % int(nb_tweets/1000), \"rb\") as f:\n",
+    "###### Bien changer ce paramètre #########\n",
+    "numero_simulation = 3\n",
+    "\n",
+    "with open('data/%ik/' % int(nb_tweets/1000) + \"Simulation_%i/input_10.file\" %numero_simulation, \"rb\") as f:\n",
     "    input = pickle.load(f)\n",
-    "with open('data/%ik/output_13.file' % int(nb_tweets/1000), \"rb\") as f:\n",
+    "with open('data/%ik/' % int(nb_tweets/1000) + \"Simulation_%i/output_10.file\" %numero_simulation, \"rb\") as f:\n",
     "    output = pickle.load(f)\n",
     "mat_finale = (input+output)/2\n",
     "mot_poids = {index_mot[index]: poids.detach().numpy() for (index, poids) in enumerate(mat_finale)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#with open(\"data/100k/input_10_b.file\", \"wb\") as f:\n",
-    "#    pickle.dump(input, f, pickle.HIGHEST_PROTOCOL)\n",
-    "#with open(\"data/100k/output_10_b.file\", \"wb\") as f:\n",
-    "#    pickle.dump(output, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -158,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -194,31 +186,31 @@
      "output_type": "stream",
      "text": [
       "Pour le mot \"tweet\" (443 apparitions), les mots les plus proches sont : \n",
-      "[('fini', 0.4787062187276242), ('chauffage', 0.4352373385110102), ('conflit', 0.43041407969460493), ('marchés', 0.4281358180947206), ('ducoup', 0.4278387518245427), ('géniale', 0.42377677153091725), ('dirai', 0.42351158967630426), ('m2', 0.41884541144575), ('perche', 0.41617388769844804), ('espère', 0.41183025630991177)]\n",
+      "[('baby', 0.7616633265045635), ('réputation', 0.6904939103536536), ('licorne', 0.6850685820780689), ('mystère', 0.6811154908318614), ('quelles', 0.6778777898767058), ('valentin', 0.6721572287395917), ('surveiller', 0.6694823245100014), ('fifa', 0.6693494153459955), ('langues', 0.6550121204425086), ('bill', 0.6544394470143058)]\n",
       "\n",
       "\n",
       "Pour le mot \"bonjour\" (619 apparitions), les mots les plus proches sont : \n",
-      "[('😁', 0.491005355907757), ('chiottes', 0.48436265918015636), ('bonne', 0.48014309540241656), ('nuit', 0.4713259323286172), ('nelson', 0.46959697513958315), ('qqch', 0.4669258627972423), ('être', 0.44659118175474855), ('doit', 0.43759841934667715), ('sainté', 0.4370971224571685), ('inspiration', 0.42910819617186347)]\n",
+      "[('fabulous', 0.8152095771169902), ('observateur', 0.7660547365406968), ('quatrième', 0.7350534435279253), ('tristesse', 0.6826855143653362), ('instants', 0.6656572611724287), ('frite', 0.6625907885561605), ('😘', 0.6591069222573218), ('mess', 0.6465111199006227), ('seuls', 0.6432358306348966), ('positives', 0.6311769883886693)]\n",
       "\n",
       "\n",
       "Pour le mot \"wesh\" (117 apparitions), les mots les plus proches sont : \n",
-      "[('rio', 0.5065844725637786), ('nourrir', 0.47176140575031955), ('marre', 0.4700615034929936), ('aventure', 0.46983547572967455), ('remarques', 0.4694306073646192), ('nala', 0.46041490365889726), ('transmets', 0.4355758248548738), ('atelier', 0.4317093381617504), ('profite', 0.4299076386525809), ('regarder', 0.4281567846961845)]\n",
+      "[('paname', 0.7224040936574715), ('dessiné', 0.7120616195481789), ('respire', 0.6870707598730753), ('about', 0.6748169713693095), ('figure', 0.6729763329335628), ('sentimentale', 0.6617146017205061), ('education', 0.638634467367702), ('monaco', 0.6385487269686804), ('cardiaque', 0.6378107448846521), ('aidez', 0.6285045804840624)]\n",
       "\n",
       "\n",
       "Pour le mot \"gros\" (812 apparitions), les mots les plus proches sont : \n",
-      "[('toi', 0.5890552816476528), ('même', 0.5598144289800582), ('as', 0.5464474736032524), ('un', 0.5452799369894469), ('veux', 0.5234981552412741), ('sur', 0.5215681972809685), ('jour', 0.5193973969331793), ('encore', 0.5191387726873478), ('elle', 0.5188750344618511), ('quand', 0.5109508678876813)]\n",
+      "[('même', 0.8063307226904843), ('fait', 0.7557250807719565), ('mdr', 0.7468004680592725), ('belle', 0.7199189994995217), ('vie', 0.7154768672187595), ('aller', 0.7024445513925083), ('cette', 0.6987229562712045), ('ouais', 0.6933975434225967), ('d', 0.6930397979242205), ('était', 0.6751767747556846)]\n",
       "\n",
       "\n",
       "Pour le mot \"grosse\" (307 apparitions), les mots les plus proches sont : \n",
-      "[('yaura', 0.5306298013597237), ('produire', 0.4918814135538685), ('attendons', 0.4749666421313363), ('cafés', 0.47375653999579515), ('distance', 0.4522501704859437), ('raté', 0.45066164658980545), ('applique', 0.44832234106642727), ('espere', 0.4413023389319153), ('thèse', 0.4339998461527265), ('facetime', 0.43183656152963995)]\n",
+      "[('tort', 0.7415547929745515), ('oue', 0.7408355596939248), ('signature', 0.6939521533132337), ('🌵', 0.6938489998493164), ('audace', 0.6926804320846331), ('ske', 0.6863192510824045), ('thème', 0.6755170202629581), ('mesures', 0.6656477802360982), ('220', 0.6614473550786611), ('piece', 0.6591020073909585)]\n",
       "\n",
       "\n",
       "Pour le mot \"femme\" (263 apparitions), les mots les plus proches sont : \n",
-      "[('k', 0.5357176884204863), ('cetait', 0.5110952351110707), ('initiative', 0.5061144464913652), ('dur', 0.5052833972324379), ('👌', 0.4756719893671585), ('espérons', 0.4572593081107272), ('squatteurs', 0.4534410126026021), ('blé', 0.4479851920516938), ('lumière', 0.4445195768749093), ('carry', 0.4444425745780854)]\n",
+      "[('hunter', 0.7694971348784917), ('2ans', 0.6586420251856137), ('résidus', 0.6518360121438477), ('poche', 0.6508624265977686), ('stationnement', 0.6493831258100328), ('ptddrrr', 0.6453825168855903), ('ressort', 0.6451462570208846), ('chèque', 0.6438636619622328), ('étendu', 0.6376038197243644), ('comprendrai', 0.6366972935388037)]\n",
       "\n",
       "\n",
       "Pour le mot \"romain\" (13 apparitions), les mots les plus proches sont : \n",
-      "[('chance', 0.5457768831500361), ('prevu', 0.5203286796611439), ('fade', 0.48067766902072917), ('salé', 0.4725717934246326), ('parano', 0.45726737948017393), ('perplexe', 0.4381528942624132), ('procureure', 0.43538592497297945), ('remporte', 0.43453889183626476), ('important', 0.43449940308153706), ('tradition', 0.43242425265714485)]\n",
+      "[('merciiii', 0.772808335658297), ('mensonge', 0.7509345635170418), ('perruque', 0.7083242456622679), ('caler', 0.7015464258280562), ('semblait', 0.7000577366461653), ('type', 0.6877334628795989), ('virgintonic', 0.6846888341049822), ('traîner', 0.6716427187411418), ('lasagnes', 0.6521818471037956), ('n2', 0.6482950742372552)]\n",
       "\n",
       "\n"
      ]
@@ -242,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +352,7 @@
        "[65 rows x 3 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -417,91 +409,91 @@
        "      <td>corde</td>\n",
        "      <td>sourire</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>-0.133300</td>\n",
+       "      <td>-0.451058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>côte</td>\n",
        "      <td>forêt</td>\n",
        "      <td>0.22</td>\n",
-       "      <td>-0.090519</td>\n",
+       "      <td>0.244104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>garçon</td>\n",
        "      <td>sage</td>\n",
        "      <td>0.29</td>\n",
-       "      <td>-0.296155</td>\n",
+       "      <td>-0.100444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>gars</td>\n",
        "      <td>sorcier</td>\n",
        "      <td>0.44</td>\n",
-       "      <td>0.188163</td>\n",
+       "      <td>-0.086535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>oiseau</td>\n",
        "      <td>bois</td>\n",
        "      <td>0.06</td>\n",
-       "      <td>0.068822</td>\n",
+       "      <td>0.230127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>auto</td>\n",
        "      <td>voyage</td>\n",
        "      <td>0.33</td>\n",
-       "      <td>0.208976</td>\n",
+       "      <td>0.149619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>verre</td>\n",
        "      <td>bijou</td>\n",
        "      <td>0.56</td>\n",
-       "      <td>-0.145308</td>\n",
+       "      <td>0.038191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>frère</td>\n",
        "      <td>gars</td>\n",
        "      <td>2.00</td>\n",
-       "      <td>0.049326</td>\n",
+       "      <td>-0.235323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>sage</td>\n",
        "      <td>sorcier</td>\n",
        "      <td>0.83</td>\n",
-       "      <td>0.070688</td>\n",
+       "      <td>0.142988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>nourriture</td>\n",
        "      <td>fruit</td>\n",
        "      <td>2.78</td>\n",
-       "      <td>-0.024888</td>\n",
+       "      <td>-0.293698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>56</th>\n",
        "      <td>forêt</td>\n",
        "      <td>bois</td>\n",
        "      <td>3.72</td>\n",
-       "      <td>-0.290679</td>\n",
+       "      <td>-0.329676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
        "      <td>garçon</td>\n",
        "      <td>gars</td>\n",
        "      <td>3.83</td>\n",
-       "      <td>0.155597</td>\n",
+       "      <td>-0.274982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
        "      <td>midi</td>\n",
        "      <td>dîner</td>\n",
        "      <td>2.17</td>\n",
-       "      <td>-0.027365</td>\n",
+       "      <td>0.363036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -509,22 +501,22 @@
       ],
       "text/plain": [
        "         word1    word2  corr  corr_word2vec\n",
-       "0        corde  sourire  0.00      -0.133300\n",
-       "16        côte    forêt  0.22      -0.090519\n",
-       "20      garçon     sage  0.29      -0.296155\n",
-       "23        gars  sorcier  0.44       0.188163\n",
-       "28      oiseau     bois  0.06       0.068822\n",
-       "33        auto   voyage  0.33       0.208976\n",
-       "35       verre    bijou  0.56      -0.145308\n",
-       "38       frère     gars  2.00       0.049326\n",
-       "39        sage  sorcier  0.83       0.070688\n",
-       "43  nourriture    fruit  2.78      -0.024888\n",
-       "56       forêt     bois  3.72      -0.290679\n",
-       "59      garçon     gars  3.83       0.155597\n",
-       "64        midi    dîner  2.17      -0.027365"
+       "0        corde  sourire  0.00      -0.451058\n",
+       "16        côte    forêt  0.22       0.244104\n",
+       "20      garçon     sage  0.29      -0.100444\n",
+       "23        gars  sorcier  0.44      -0.086535\n",
+       "28      oiseau     bois  0.06       0.230127\n",
+       "33        auto   voyage  0.33       0.149619\n",
+       "35       verre    bijou  0.56       0.038191\n",
+       "38       frère     gars  2.00      -0.235323\n",
+       "39        sage  sorcier  0.83       0.142988\n",
+       "43  nourriture    fruit  2.78      -0.293698\n",
+       "56       forêt     bois  3.72      -0.329676\n",
+       "59      garçon     gars  3.83      -0.274982\n",
+       "64        midi    dîner  2.17       0.363036"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,14 +539,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le résultat de word2vec est différent de celui du human judgement (non rejet de H0 = non corrélation) p=0.748 / Valeur de la corrélation : 0.099\n"
+      "Le résultat de word2vec est différent de celui du human judgement (non rejet de H0 = non corrélation) p=0.364 / Valeur de la corrélation : -0.275\n"
      ]
     }
    ],
@@ -570,16 +562,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0.016', '-0.027', '0.022', '0.022', '0.016', '0.022', '0.022', '0.022', '0.022', '0.022', '0.027', '0.071', '0.099', '0.148', '0.148', '0.181', '0.181', '0.176', '0.148']\n",
-      "['0.0165', '-0.0275', '0.0220', '0.0220', '0.0165', '0.0220', '0.0220', '0.0220', '0.0220', '0.0220', '0.0275', '0.0714', '0.0989', '0.1484', '0.1484', '0.1813', '0.1813', '0.1758', '0.1484']\n",
-      "['0.957', '0.929', '0.943', '0.943', '0.957', '0.943', '0.943', '0.943', '0.943', '0.943', '0.929', '0.817', '0.748', '0.629', '0.629', '0.553', '0.553', '0.566', '0.629']\n"
+      "['-0.440', '-0.374', '-0.352', '-0.264', '-0.291', '-0.297', '-0.280', '-0.275', '-0.286', '-0.275']\n",
+      "['0.133', '0.209', '0.239', '0.384', '0.334', '0.325', '0.354', '0.364', '0.344', '0.364']\n"
      ]
     }
    ],
@@ -588,9 +579,13 @@
     "all_p_val = []\n",
     "for i in range(20):\n",
     "    try:\n",
-    "        with open('data/%ik/input' % int(nb_tweets/1000) + \"_%i.file\" % (i+1), \"rb\") as f:\n",
+    "        with open('data/%ik/' % int(nb_tweets/1000) + \n",
+    "                  \"Simulation_%i/input\" %numero_simulation +\n",
+    "                  \"_%i.file\" % (i+1), \"rb\") as f:\n",
     "            input = pickle.load(f)\n",
-    "        with open('data/%ik/output' % int(nb_tweets/1000) + \"_%i.file\"% (i+1), \"rb\") as f:\n",
+    "        with open('data/%ik/' % int(nb_tweets/1000) +\n",
+    "                  \"Simulation_%i/output\" %numero_simulation + \n",
+    "                  \"_%i.file\"% (i+1), \"rb\") as f:\n",
     "            output = pickle.load(f)\n",
     "        mat_finale = (input+output)/2\n",
     "        mot_poids = {index_mot[index]: poids.detach().numpy() for (index, poids) in enumerate(mat_finale)}\n",
@@ -602,7 +597,7 @@
     "        all_p_val.append(p_value)\n",
     "    except OSError:\n",
     "        break;\n",
-    "print([ '%.4f' % elem for elem in all_cor ])\n",
+    "print([ '%.3f' % elem for elem in all_cor ])\n",
     "print([ '%.3f' % elem for elem in all_p_val ])"
    ]
   },
