--- a/Code/2 - Evaluation.ipynb
+++ b/Code/2 - Evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "99718"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +121,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On renseigne ici le numero de la simulation, cf <https://github.com/AQLT/StatApp/blob/master/Code/Parametres%20lances.md>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###### Bien changer ce paramètre #########\n",
-    "numero_simulation = 3\n",
-    "\n",
+    "numero_simulation = 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('data/%ik/' % int(nb_tweets/1000) + \"Simulation_%i/input_10.file\" %numero_simulation, \"rb\") as f:\n",
     "    input = pickle.load(f)\n",
     "with open('data/%ik/' % int(nb_tweets/1000) + \"Simulation_%i/output_10.file\" %numero_simulation, \"rb\") as f:\n",
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -186,31 +199,31 @@
      "output_type": "stream",
      "text": [
       "Pour le mot \"tweet\" (443 apparitions), les mots les plus proches sont : \n",
-      "[('baby', 0.7616633265045635), ('réputation', 0.6904939103536536), ('licorne', 0.6850685820780689), ('mystère', 0.6811154908318614), ('quelles', 0.6778777898767058), ('valentin', 0.6721572287395917), ('surveiller', 0.6694823245100014), ('fifa', 0.6693494153459955), ('langues', 0.6550121204425086), ('bill', 0.6544394470143058)]\n",
+      "[('dieu', 0.7915141662204722), ('dans', 0.7349385169752465), ('moi', 0.7300252371021064), ('tête', 0.7251926428371986), ('meilleur', 0.7207601874232467), ('votre', 0.7179663279337353), ('tous', 0.7100567656293354), ('pire', 0.7091496512545009), ('€', 0.7085709676503221), ('ces', 0.7025774626512065)]\n",
       "\n",
       "\n",
       "Pour le mot \"bonjour\" (619 apparitions), les mots les plus proches sont : \n",
-      "[('fabulous', 0.8152095771169902), ('observateur', 0.7660547365406968), ('quatrième', 0.7350534435279253), ('tristesse', 0.6826855143653362), ('instants', 0.6656572611724287), ('frite', 0.6625907885561605), ('😘', 0.6591069222573218), ('mess', 0.6465111199006227), ('seuls', 0.6432358306348966), ('positives', 0.6311769883886693)]\n",
+      "[('😘', 0.8722801036077787), ('😊', 0.7724868458321281), ('journée', 0.7470891125184896), ('bonne', 0.7444982175668506), ('civil', 0.7252480936612105), ('nuit', 0.7183645242773347), ('beaucoup', 0.7114370755051981), ('tl', 0.6948894462969063), ('belle', 0.6848222314170681), ('☺', 0.6823402692791596)]\n",
       "\n",
       "\n",
       "Pour le mot \"wesh\" (117 apparitions), les mots les plus proches sont : \n",
-      "[('paname', 0.7224040936574715), ('dessiné', 0.7120616195481789), ('respire', 0.6870707598730753), ('about', 0.6748169713693095), ('figure', 0.6729763329335628), ('sentimentale', 0.6617146017205061), ('education', 0.638634467367702), ('monaco', 0.6385487269686804), ('cardiaque', 0.6378107448846521), ('aidez', 0.6285045804840624)]\n",
+      "[('bloquent', 0.6924217971142215), ('ptdrrrrrr', 0.6831607941028589), ('adieu', 0.6756911727916917), ('dynamique', 0.6695307011870701), ('breton', 0.6547175854392645), ('sel', 0.6537959139885917), ('130', 0.6483834577211134), ('efficacité', 0.6471614351123675), ('deuil', 0.6421295877717434), ('toilettes', 0.6403464896120546)]\n",
       "\n",
       "\n",
       "Pour le mot \"gros\" (812 apparitions), les mots les plus proches sont : \n",
-      "[('même', 0.8063307226904843), ('fait', 0.7557250807719565), ('mdr', 0.7468004680592725), ('belle', 0.7199189994995217), ('vie', 0.7154768672187595), ('aller', 0.7024445513925083), ('cette', 0.6987229562712045), ('ouais', 0.6933975434225967), ('d', 0.6930397979242205), ('était', 0.6751767747556846)]\n",
+      "[('être', 0.7971392328320189), ('non', 0.7852901558091189), ('son', 0.7689697172111162), ('pardon', 0.7472298343566078), ('vie', 0.744245370045894), ('été', 0.7265554975033105), ('n', 0.718560010957224), ('était', 0.7092309149363285), ('gars', 0.7028200191374213), ('moi', 0.7006317152626776)]\n",
       "\n",
       "\n",
       "Pour le mot \"grosse\" (307 apparitions), les mots les plus proches sont : \n",
-      "[('tort', 0.7415547929745515), ('oue', 0.7408355596939248), ('signature', 0.6939521533132337), ('🌵', 0.6938489998493164), ('audace', 0.6926804320846331), ('ske', 0.6863192510824045), ('thème', 0.6755170202629581), ('mesures', 0.6656477802360982), ('220', 0.6614473550786611), ('piece', 0.6591020073909585)]\n",
+      "[('beau', 0.7350713830861427), ('pute', 0.7331809313365988), ('niquel', 0.6803841797403452), ('adore', 0.6774210084679717), ('prononce', 0.6684759145730349), ('bon', 0.6256575322014698), ('sauver', 0.6222876418479838), ('sortir', 0.6190533149237222), ('cha', 0.6173992926092485), ('4', 0.6171454412657525)]\n",
       "\n",
       "\n",
       "Pour le mot \"femme\" (263 apparitions), les mots les plus proches sont : \n",
-      "[('hunter', 0.7694971348784917), ('2ans', 0.6586420251856137), ('résidus', 0.6518360121438477), ('poche', 0.6508624265977686), ('stationnement', 0.6493831258100328), ('ptddrrr', 0.6453825168855903), ('ressort', 0.6451462570208846), ('chèque', 0.6438636619622328), ('étendu', 0.6376038197243644), ('comprendrai', 0.6366972935388037)]\n",
+      "[('scandale', 0.7313009837298562), ('troooop', 0.7081457924182969), ('fai', 0.7039504252186723), ('bill', 0.6894737186216298), ('besoins', 0.6837436750842953), ('seb', 0.6797421644479253), ('ballon', 0.6568802748624516), ('forces', 0.6440018114371583), ('sinon', 0.6410052242254063), ('pays', 0.6314459820588597)]\n",
       "\n",
       "\n",
       "Pour le mot \"romain\" (13 apparitions), les mots les plus proches sont : \n",
-      "[('merciiii', 0.772808335658297), ('mensonge', 0.7509345635170418), ('perruque', 0.7083242456622679), ('caler', 0.7015464258280562), ('semblait', 0.7000577366461653), ('type', 0.6877334628795989), ('virgintonic', 0.6846888341049822), ('traîner', 0.6716427187411418), ('lasagnes', 0.6521818471037956), ('n2', 0.6482950742372552)]\n",
+      "[('congé', 0.7079173426885517), ('policier', 0.6683937630821253), ('adieu', 0.6586900218298726), ('trahis', 0.6520801362772918), ('jpleure', 0.6435631295827594), ('fraiche', 0.6419411195981488), ('soulage', 0.6411912221084529), ('lentement', 0.6323127632273406), ('tv', 0.6306848447149086), ('mvp', 0.6250675297040177)]\n",
       "\n",
       "\n"
      ]
@@ -234,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +365,7 @@
        "[65 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -409,91 +422,91 @@
        "      <td>corde</td>\n",
        "      <td>sourire</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>-0.451058</td>\n",
+       "      <td>-0.155433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>côte</td>\n",
        "      <td>forêt</td>\n",
        "      <td>0.22</td>\n",
-       "      <td>0.244104</td>\n",
+       "      <td>-0.396190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>garçon</td>\n",
        "      <td>sage</td>\n",
        "      <td>0.29</td>\n",
-       "      <td>-0.100444</td>\n",
+       "      <td>0.260610</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>gars</td>\n",
        "      <td>sorcier</td>\n",
        "      <td>0.44</td>\n",
-       "      <td>-0.086535</td>\n",
+       "      <td>-0.206769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>oiseau</td>\n",
        "      <td>bois</td>\n",
        "      <td>0.06</td>\n",
-       "      <td>0.230127</td>\n",
+       "      <td>-0.375849</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>auto</td>\n",
        "      <td>voyage</td>\n",
        "      <td>0.33</td>\n",
-       "      <td>0.149619</td>\n",
+       "      <td>-0.104415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>verre</td>\n",
        "      <td>bijou</td>\n",
        "      <td>0.56</td>\n",
-       "      <td>0.038191</td>\n",
+       "      <td>-0.493410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>frère</td>\n",
        "      <td>gars</td>\n",
        "      <td>2.00</td>\n",
-       "      <td>-0.235323</td>\n",
+       "      <td>0.305727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>sage</td>\n",
        "      <td>sorcier</td>\n",
        "      <td>0.83</td>\n",
-       "      <td>0.142988</td>\n",
+       "      <td>0.065996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>nourriture</td>\n",
        "      <td>fruit</td>\n",
        "      <td>2.78</td>\n",
-       "      <td>-0.293698</td>\n",
+       "      <td>-0.392066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>56</th>\n",
        "      <td>forêt</td>\n",
        "      <td>bois</td>\n",
        "      <td>3.72</td>\n",
-       "      <td>-0.329676</td>\n",
+       "      <td>0.075912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
        "      <td>garçon</td>\n",
        "      <td>gars</td>\n",
        "      <td>3.83</td>\n",
-       "      <td>-0.274982</td>\n",
+       "      <td>0.003807</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
        "      <td>midi</td>\n",
        "      <td>dîner</td>\n",
        "      <td>2.17</td>\n",
-       "      <td>0.363036</td>\n",
+       "      <td>0.426020</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -501,22 +514,22 @@
       ],
       "text/plain": [
        "         word1    word2  corr  corr_word2vec\n",
-       "0        corde  sourire  0.00      -0.451058\n",
-       "16        côte    forêt  0.22       0.244104\n",
-       "20      garçon     sage  0.29      -0.100444\n",
-       "23        gars  sorcier  0.44      -0.086535\n",
-       "28      oiseau     bois  0.06       0.230127\n",
-       "33        auto   voyage  0.33       0.149619\n",
-       "35       verre    bijou  0.56       0.038191\n",
-       "38       frère     gars  2.00      -0.235323\n",
-       "39        sage  sorcier  0.83       0.142988\n",
-       "43  nourriture    fruit  2.78      -0.293698\n",
-       "56       forêt     bois  3.72      -0.329676\n",
-       "59      garçon     gars  3.83      -0.274982\n",
-       "64        midi    dîner  2.17       0.363036"
+       "0        corde  sourire  0.00      -0.155433\n",
+       "16        côte    forêt  0.22      -0.396190\n",
+       "20      garçon     sage  0.29       0.260610\n",
+       "23        gars  sorcier  0.44      -0.206769\n",
+       "28      oiseau     bois  0.06      -0.375849\n",
+       "33        auto   voyage  0.33      -0.104415\n",
+       "35       verre    bijou  0.56      -0.493410\n",
+       "38       frère     gars  2.00       0.305727\n",
+       "39        sage  sorcier  0.83       0.065996\n",
+       "43  nourriture    fruit  2.78      -0.392066\n",
+       "56       forêt     bois  3.72       0.075912\n",
+       "59      garçon     gars  3.83       0.003807\n",
+       "64        midi    dîner  2.17       0.426020"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le résultat de word2vec est différent de celui du human judgement (non rejet de H0 = non corrélation) p=0.364 / Valeur de la corrélation : -0.275\n"
+      "Le résultat de word2vec est différent de celui du human judgement (non rejet de H0 = non corrélation) p=0.223 / Valeur de la corrélation : 0.363\n"
      ]
     }
    ],
@@ -562,15 +575,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['-0.440', '-0.374', '-0.352', '-0.264', '-0.291', '-0.297', '-0.280', '-0.275', '-0.286', '-0.275']\n",
-      "['0.133', '0.209', '0.239', '0.384', '0.334', '0.325', '0.354', '0.364', '0.344', '0.364']\n"
+      "['0.132', '0.115', '0.170', '0.137', '0.137', '-0.005', '0.110', '0.231', '0.363', '0.363']\n",
+      "['0.668', '0.707', '0.578', '0.655', '0.655', '0.986', '0.721', '0.448', '0.223', '0.223']\n"
      ]
     }
    ],
